# django-cloudflare-images

./: .editorconfig  .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  ruff.tom  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  tests.yml
cloudflare_images/: config.py  field.py  service.py  storage.py  urls.py  views.py  widget.py
cloudflare_images/static/css/: widget.css
cloudflare_images/static/js/: widget.js
cloudflare_images/templates/: widget.html
images/: service.py  storage.py
tests/: settings.py  settings_django_4_2.py  test_config.py  test_field.py  test_service.py  test_storage.py  test_urls.py  test_views.py  test_widget.py  utils.py
