[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cloudflare-images"
version = "1.0.0"
description = "Cloudflare Images integration for Django"
readme = "README.md"
authors = [{name = "Pierre Guillemot", email = "pierre@kalvad.com"}]
license = "MIT"
keywords = ["django", "cloudflare", "images", "cdn", "media"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "Django>=3",
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/KalvadTech/django-cloudflare-images"
Repository = "https://github.com/KalvadTech/django-cloudflare-images"
Issues = "https://github.com/KalvadTech/django-cloudflare-images/issues"

[project.optional-dependencies]
dev = [
    "build==1.4.0",
    "ruff==0.15.0",
    "tox==4.34.1",
    "ty==0.0.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudflare_images*"]

[tool.setuptools.package-data]
cloudflare_images = ["templates/*", "static/*"]

[tool.ruff]
exclude = ["env"]

[tool.ruff.lint]
select = ["S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105"]
