[metadata]
name = django-cloudflare-images
version = 0.6.0
description = Cloudflare Images integration for Django
long_description_content_type = text/markdown
long_description = file: README.md
author = Pierre Guillemot
author_email = pierre@kalvad.com
url= https://github.com/KalvadTech/django-cloudflare-images/
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
packages = cloudflare_images
python_requires = >=3
install_requires =
    Django>=3
    requests>=2.20.0

[options.extras_require]
dev =
    build==1.2.1
    ruff==0.5.6
    tox==4.17.1
